--- a/ansible/inventory/kube/host_vars/k3s-01.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-01.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:rdM1nXtj,iv:3MGuDC+x7d/KiWzHwi0qlg9lNqapolm7RihTHgo06Nw=,tag:dgHWS7GMXdug52v+neDDNw==,type:str]
-ansible_user: ENC[AES256_GCM,data:iCycKmzx,iv:f2TWzo7I/P6FNdk1TTXwQTd2TkltqwPJrVGAu49o/gQ=,tag:1CafWA29lEVwki7WKbXNlg==,type:str]
+kind: ENC[AES256_GCM,data:aj1EDowz,iv:yv+wLt/e9j24TjUPKabqXTXpXNjicA912yssz9A80yE=,tag:jxWkF/LBZt/oKpfyJZw3ig==,type:str]
+ansible_user: ENC[AES256_GCM,data:YlV1ttc1,iv:f6NCZQd5dvb0DTaPhYi/SKWGPayCZhKWtC89CsiSsk4=,tag:k/87EZVI0O27dbww/w0cNg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4QXljNHNnS0V6WmFVTmdx
-            R0VEbjJudzhIVm1hVXpnMGFSUXZObjJQSmpFCnpMRXo0azJUUXRXOHkrMENEUWpX
-            Y3lHRnd1ZUY2WGVxSWNsVEtZa1QxS28KLS0tIGNvb2orSnJyY0U2NmpKYThuTzBr
-            bDlSNkdoMXE0NWg0em9nWCtDZzBLZWsKhiS0cloOtdBDSgO2BziwTOXw+iLoSKYc
-            KHJooF12xsIev8KaDvwCMAh0HomW9GjEWsgSmWu2tWKefak0NKPJqg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDMGxEaDI3c3NkVDJQUUcw
+            UXNTb28zWnU1QjdON2YvZHBrU3g2ekxoSkZZClkyWGJYTmVTRVpIa092NGRGVkxV
+            UThtajdxT0hweDBIVUxqcTJ3N3hjQ0UKLS0tIENKTWVpUzkwajBseFdqQ1lOaXRl
+            cGhuN0FobDhpd3k1dU8xTEMyc0h3b1UKYN61T5PfDpVQKqdt9CcCjgJx54eX0IZ7
+            YynDl7duCcNQL3wzAhWcRF3xxfHWjfb9tm901QUqNjAOnThLre9nqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:98vwDICYQ32f03MP2D+NiJbWSrD5NDNOsJNlgpytlgESRsBC5nzNmU+Pcgxg1ckyJk6HRTi6yzL5uklKSo76v7dyNHZ4X5anWKHax3Dq0k3tL3D40wuBU1L5DySuxlN7B1vAAFq5sJ1xZneMPZIAqZTKU+aADeD3jSW1rg97u3c=,iv:dk5+TBqto1aoQy+tqRabfMaB3roxPxOLw7DF1ktyBG0=,tag:Q+51FvKs5jAZdK0XyIhT9g==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:4WTxjA/o8Oime9Dqcbri/HNeuORJJmcPUg5iJB0xQ2b8CUMpLTN/44Zi6ypeJA6rvOazowGdI9eNYn/S8ZX3f18P87ieC/OL+zRz0S3keu5tI4dwPf2dD78VLkZxd1qGUh7K6QTFCTuVbpchmIgSsIEK+rfMXGrN8AbYkY1wqEU=,iv:priXB9/N5TgeH6vydqD21C40gI0IXDk2Pv6a1SG+IzI=,tag:y+LsQPmcjStBqHm3gHgvkw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
