--- a/ansible/inventory/kube/host_vars/k3s-02.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-02.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:mo2Vy7j8,iv:3zB9m/OfDTLWeEQ/7DBJh4k6a9kEkE0uvHQRfH8ywR8=,tag:ZXmQBFXuAC3O/yhbNUBKfg==,type:str]
-ansible_user: ENC[AES256_GCM,data:eZKXk+5L,iv:VmAF7YUoHxbsd3ayGEjEK19ZH7Rve2QoWYjmZvd9GbI=,tag:3EqswxNccmphvSeVoonj2Q==,type:str]
+kind: ENC[AES256_GCM,data:JO1HuoO5,iv:WgdDCo23luOb2g0MbA5Y2bCxlC8m3+bv0aV7RoVPEQw=,tag:r6qGyShygCOfl4NtLqWRSQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:GsDM2xTf,iv:mpUhHTk4eQsw2JH1tVaaF8hBJUOsUUpgYki4mfyWq8Y=,tag:bOGzzvGO9BBpyhXNgE86TQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTL25pNFlOZXZmaXFqNEVK
-            Y0ZEUFZ0Q2hvUWhlSWlWengzRElDRW5WTlQ0CndYTFFpZmVsWUx1NU1jNTJnMStu
-            TUlsNnRqYTE3cHVpUzYrSFhaaVR3VHMKLS0tIDJkQnpwWWpkQVZxMkFrMHNyaktG
-            eFZ6cEx3Smk1bTVxdGxzWjI4Wm5zRVkKvCCqOh+G/aK+r7kYdhvtYHOmO6yl8o9W
-            e4BoubZWW/6hyGSdtykqG7kumFI1n9p77hm9GnIWhaF3GvuBiu26Og==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnc04xSHVEcjQ5eVROeVQ3
+            aUFoMGZGTmFvRnJmSE5SYUx2bzkxWTVVZnhBCkpKdXpEYnoySjhHZFd5MXBkeHh5
+            THNHNUV4VisrZWZwRnN1N1BuclZVUjQKLS0tIGtGTkpCUndBMDBvVnIyV3BZOWZq
+            OWx5OWNlR1doNXBDdGN5Sm5rYWlYTmMKy1sPQ4LWptBdd0HDQxRJHNTd/oi2ssR4
+            X4hCA1PQWZWtC5O1sQrSr1eS7vXES/sCbwAK3lG1o2RsVQhyLFxG5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:ZmMyKZ4PsxnxCu848kdNYBw2u20VoejM4SUiZj8rtjtTAi6ccKWHLOu8hmGlHRQGrKp08XpdF1dvojhlID7/t7dFfYcO/M72Vz+P1Ei/S/nQD6a/60y4NZROOtepAs+rT+1kolcGwVtvCISLXXDks5uS1qrCcbmFPwUMPyvVcrw=,iv:Gr2zLYjOSQ47EIJS3t+8eihlfK6gaFIabZXUII/QH44=,tag:JEQjLJzP8XDovuNEki+YQQ==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:c5SZpTe2+xFZfcb7ikggb4w0moteZzSesyNNPEqjfX1zESeGSdiz13JFuqIuQ4Xler/mVAbdzm7nH+ic3CW1ck0dc1QxrEN2/vkUqTrhpsmw6bquMG4+X1uV/Hz6y1XFRF000PQizNlnfmfP37F0txMx/ssQ3UJKjF1aKJfQeig=,iv:pmn6BtnOCGc6EdfxFPLyFbLQ795CnMeJ1cF7lLeO2Og=,tag:Rr1nWck6EpCp3Dx1s4cMFw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
