--- a/ansible/inventory/kube/host_vars/k3s-03.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-03.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:7Sv4q2Oc,iv:6di1+m6bZ72sNbWqDtnbyHm8s41b1UehKiHTNS+WYqI=,tag:ZRVXcbRFH36FpxBnBAQKog==,type:str]
-ansible_user: ENC[AES256_GCM,data:vRHcsk0R,iv:OJU6twpJnuBDXkCo4smf5jChxuVG0hOk8oWCxFxmkqE=,tag:IjINIpDfLC5G6uj6f2KXCg==,type:str]
+kind: ENC[AES256_GCM,data:OyloD/Ka,iv:l3UsuFcIBI+CEvbUCVzlagFgehxqDTxpFZtiS8Rymak=,tag:u9srdByyG3LQixTb62CVJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:Ah1YWHk8,iv:cZgqvljRAHi7xw0HM4JuULlxjqkKD7XW7qmCvXhzjPI=,tag:yfjT49HeVeH88VoGAA4Ijg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWcSt2cTZXYnk2R2RrL1VT
-            cWYzV0U0SVo2OW5pNUFNQkxhV3htOEJlazIwClBjWjVZcjVVb1pCMklKL084UGxI
-            ZlF2ZVo1a2g4RW0vdFlWOCtoUGQzVlkKLS0tIHZuL2lNU0gyM3FJTW5GcFR0Q0JX
-            d2JySlk1Z3VPb0tmRFlUNEVlak4xQXcKirrMW6YwFbD0eznG2GQslBL7JJt1wiAC
-            WOhf2Qtc1xBVww0ZQ34x9VS6RytdhjtO+5ckVQ346rU+0KApZ8+Cgg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZbHJtNWJqVHYycHQ3b0k3
+            NFNDY3VIYU1XdVlPUWJHcWIvektHdkoyNkhBClI3eWZxdVorZXRmQlFMcW9GUElV
+            ZjFwQmR6Q2xRalhqTmFOVnBKZXZMK2sKLS0tIG9tWTVqZ1ZYNEQ4YkZtVjBLM3JT
+            WjZTWVo3NmZoaVdwcEQrRWhBVnNVS00KfgGssgE1pQaTwCJ61yE1UPbcnco3jnY4
+            qaxg5kNPOksPIbGnrVb1Wflt5C5+YQ7u/j+8q4DWocO0xBfEyKaT7w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:L2agM4/mllJhsPL2Xc/PaqpZhhvaXoShviYF5km4vrbYfWYY7lWZ+hUoSJ7MXZdrMhDKFMSJxlXdp+q0vUhPY7xyqEvv+0nWGf8kWCx7uFzQ34A9a5RBS0b8BM+TokAjiwDex1sNrsLFPd9TnIqkoD14cXGG4Q+e4nXQQL4Yqx0=,iv:NdaCwLYd5ipO8UPrLT28E45Zwt6yfxzlorTH4NUwkSE=,tag:K0qM9SZEoImszmsy/jOCIQ==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:Owc4dZ+V2MYYLQCkbfdDtD2u7E2vOLHYdpF4+6zXT3vqLPV8FSFYJy+hltIN1Xk86mNnRerJF3B5CY5wkfFmIaObW1edexoBBOP4+en5klbhH89FMXWHXyw0gropMOFp9e/siQncpaMJKj5wqUUKaJhh1J11EwQTPOlGQZzYe48=,iv:zSb1UXAyOvuCAHnxOSf8B01RjGpFqT02krulVcXAONc=,tag:pv6+QDc28+gU8ZZHQemMcw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
