--- a/ansible/inventory/kube/host_vars/k3s-04.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-04.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:sxmaJ6sq,iv:tx8qNGOFfmo31jSrWEs39ow3x/e+cS+nd/QrRkdQhgE=,tag:rxnDHN0M7NfMhMV9v3Jtwg==,type:str]
-ansible_user: ENC[AES256_GCM,data:PMvEX88E,iv:ZlCm4iJpFnpJhVLv1C07pbDi3Ov03GCos3qMsZ48nSQ=,tag:E3zM8Nmuvnh1R5n/Ft+00w==,type:str]
+kind: ENC[AES256_GCM,data:0UM34ftw,iv:trI5qQpBXR+mekIuE0Sy42oaltQYL2Tsrk61kuEgKbU=,tag:Ay+Lkw+Z21NfRgh08eu3RQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:9ltuZx9q,iv:DoOqSKd54RTPz1TvM3TJr+oSJc37WpO+smXUQS3ovhE=,tag:TZUY4Jw/KXwwkB8xdaeeaQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtdVdqUzZMdXVpN0lTNjN0
-            ZG9OUjBnZVgzeVZLWkdocm9HdGtqVEpQdTJJCnZZb1Nybm5jcjlHUW5ZdkhmcHdV
-            UXA1empvRmtDZW5uMzdFM1hxaGVkc2MKLS0tIDFPODlGWWQ1dDNyWUlBMG5hYkhu
-            L2ZxZUgycGpJNzhWTGt5WGVSNkFic3MK0cYODCscUKZDsdseIaNOvI5cKIWSfWfS
-            cVOaXro+HfsSxV/fYr5MYT56C8QSYQr9YdFVFweLAG65oofM09Y62g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFc0dsNFFsWkJuOWFlRCtu
+            eUtYQW95bXBZUVJ0SkNXMDZld241MUJsSm5rCmQyQjFiQzVoOXJ1L2t6eWIwOUVJ
+            ZE16TnMyREg1WHBESklNZytDNXUvdzAKLS0tIEExWFNranhlVUxSdVoyWVFJeWNY
+            bWdVdndHK01YVmdvUzI1VUlEMHRwd1EKZgig26pvETcXfCH1eT67wTlC748ekCGZ
+            YZZttJxwokJVx1Ke2xNDKAXd8AayZU/05Z4th0BSyJ00hT0zCDmElA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:WHBdcJ88w1cmzwHalve0O+axsJke7lzGYghe6rViyzWOVN772hVwo1PIwcpvT3uxZ+yjuwCLltIImszIv9Qsrp2U4x+0yp2HQv4ZI3vd0QObzNV0QY/gpSt8ShHUUDw9WEownkCP4fFgfqXceS/wYsaSlEfORqzDGrVCWf4K050=,iv:4f8zQqOaKtKj2u1032a+lbeX3AA+bjSZHBerp7WLPbE=,tag:xF+xgnfaXLh+SZidH5gySQ==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:l2LoJRuz6tcwxzcM1EcOGbH0JLXgMXrTQIBWxEPWNbJaUAOlLHV6W+b1eO/bsRAOHWHkQJzxpKVD7YLCB/JKL5ukS7X+LcWrFO/tv99Zy7NKzQv6SIu5koTyw0LrzvE1fAd4duHcwsCk2/YR6P91aPVejYkeqpsqzrHB5C1EDL0=,iv:TNx2/EVVLtUTAxaJPqJ/I6gy/JRBn3W7yjEOxdmGVXU=,tag:sMpVJCHuYA3yQHCZRE4APg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
