--- a/ansible/inventory/kube/host_vars/k3s-05.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-05.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:kPM4SiVh,iv:j3eUcm0OVTBUEGMLA5yETtG1+H52oVwTmonVFCpqtGk=,tag:eVJZ8oK4Ekjz9DYrhF9vFg==,type:str]
-ansible_user: ENC[AES256_GCM,data:veINZ6Rz,iv:M7czsgTTz/uig0egk+TWyYgItr3cDh9Mu4CkNj5goVM=,tag:QwiKqc2Vz3fZFUOzmQcRag==,type:str]
+kind: ENC[AES256_GCM,data:46l6hUDg,iv:jxi4Vv3DQbZ/pk3mxxi4GeRMHPHeUPl3eZG70Y/1vPE=,tag:FLQIdwToj97AwfH2hKMAeQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:qkidRWy6,iv:Za4pROdxneJMN+Z+PyhLUvQqNC+WoFPGNcCXUqDXhG0=,tag:p3vx8M3at7pA/N9IOZLmew==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSWk9vcGRJMUJBNUl1S2E5
-            eXorenM5eFE4b0RpTlZUaWRVOEFLYzN6bkhBCm5DbmJ4WUhRRHl3Nm9QTHZTNG96
-            eUk4ZVZHa1NzT0hHNUloTFljRlM4T0EKLS0tIDMzZS9OWUFiTm5URlFoaDFXTEJX
-            T0xpWWU3TzIwQTA1VFFZTDRNVThZZ2cKBkMXZfZo18tZh1UrlbrkWaQVtcl7H9dn
-            r4zpx348ANJIKWjgou5k5bmDlbXOZ3Pe0nRqfOwJjUxkrP8RBVya+A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArQUxJbjJDa2J6UEl3TXNx
+            c0JmMGRDZDJMYW9OWFlpR0pHSm1tWTUxNm1ZCkRxT01BaEhMSE1CZ0I2ZVJFNGFx
+            N1BxNlVtYy9rSGkrc1pidENmTzFNOGcKLS0tIGViMGgyU3lYSXdlbzVLRDRuV1dx
+            TEZWcm55Z2JjUlY5aVJvU3lLRXBoencK6O1M0urZAu04dEnqIR8JfnInPXZzdL+7
+            4oroRGvaXhpoHxHkgjUpsrjytEQMPUwhMFtBa5va2sePFnV5RN4pHw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:c+WB1Wd2Gp6zi3PyZW0VACk7rhsbJMV8QIZCQwRf+VK45n9B5p21hbJWcteB6mwB2hN9YsJ/GoODrV6sdpfHEo6vTVogGf7X3ZyHvlbZjrMaFuNc1seNO8R1N1rvjFeLEzgKoXrKIU/l1k7Cl0ls1mVvkoOhS/9YCbqM3D+or1Q=,iv:C9sJbuFaLMorc5SFO3hUtvUNEz6t0OZq9llA+7K4YME=,tag:UVzKZF4BgxCAvtKBTIN6wg==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:oL6i3O25Gfm9oxPLt5LEayrQXHDo3sDtrGTJ+lPAD3wv86uJx5xnPJa12ZfeZ7SmrpXCIzvZGS2MUCa5UqBu1be/L4qnM49GgkiGoY7rzRraAwuSTj+YaT7dSiC18BcVkxObPbiTw2cFunjfFWWXf9Uik8VRRAGvE1kgtXkYeBk=,iv:3DgAtilfaAu1uW9vQ8CCT2YI51JQESyfOAo3waC4XWg=,tag:ZYGJD0fhz1PlfCOe/qQgLA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
