--- a/ansible/inventory/kube/host_vars/k3s-06.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-06.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:BDW6fPka,iv:/VfqHCoNNrDKms6ApgRJwrfDRex0JpBCJ6EhBbpH06s=,tag:5cqz+YG4AD1QRDU1BmlfhQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:X+5StDv9,iv:8j8APV2BPsZy6AvySoeWHLtGC0LYyVoX/JDtgHuKfQw=,tag:8xEmPXVtGhFGQPLMBegtsg==,type:str]
+kind: ENC[AES256_GCM,data:EA3LUQY/,iv:qcxSY6RLFmodn+5tUyvjg2VxhlPuwK3ET+/xKMWFMYc=,tag:04CPfWn7WiawD1vaCxL23w==,type:str]
+ansible_user: ENC[AES256_GCM,data:0pHuD35B,iv:keJq3pLaM0HJ/sBe3BQWaBgLvFGIaXgVL4zE9bp+Vvo=,tag:sniHrSEdrOt4KqbomQlR8w==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6d2kwaUJuS0JGUXNhT2hx
-            MVVlc2VtWkdpVHdDYTAxNEViNDNTRTd4bzNvCmN5L3lFUmtZcnJMR3p5cjJKRTho
-            MWNVWmZpSFRNQXdqbk5oMldyZ3JBbDAKLS0tIGVRaUhCMlphUEgrU0pzR0pqb1FS
-            K3AzU3JPQzlvOFFwcUppc3JKVmdSdG8KGCmGcGLQfTZoUnPCvDLKY62OsNMkyhla
-            gDDI8XAtSYL9O0ZnHZqg57kSxkVnvmCnPqfh5oJyJSacTBWHHI7ifQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBScFF5dTJPTVZValloalcr
+            eEFvaVBYd09yTVprdGpBUmZtd3p5cHJmR1E0CmJWUjdzUjhFMkt4NnFGcnY0YjYv
+            NWczcVhaa1BLMU1Gd2xuVkFXZzdZOEkKLS0tIHlGNVAzb1dEV05pUUpFTWNtUmhk
+            RHpQUEhBWGpReWpEemJzN1RIRFR4VzQKpT9Oghwcn0Gn1B+Ite5hSzXxJbdkS9ng
+            tlDCS7XzJfXzStXQj4LXzmAtbvXbhmLpIDPGBueyJIHEFfQ3qUK6rw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:NXHYxjTcT9YBNqBy8BSIwdeKoWi+RVaHs7KysWsP1/7vrF+h+DOu2sJslfaejoPsjL/JUQAR1aqHI81XmsrvDITk8U4ISOWXqLgdKG0uOgDUkS2ZUbNOZqMhC+pXlwYICtGV7HtJNFlJ3oK0O5COvSI6AuMPSGAogK4Pvdaz8Js=,iv:+cKfpRwqV/xgo5mXdlDHzB6XRSBPGP5k2VdJtaM4TtU=,tag:8FctigACH1rHNB6/uLP5RQ==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:ENPXEQ3r+Q/equ1dkGdooyi/Tbs5RufTJ/QTxfh2NPeK3+zR1ezBKjYIQcJzaTD7XL55xeOGBDjGurd1tbzG5mtbhSXEBkG8H+g+KTDnxyOge7dxc2p0kyWpKLqL/gOtzhiC62LcDzop7IGShp1HBnNDp4EfD6s9W9MrEKA0Slg=,iv:gCbO8UFLv4exMI5XD/Pn2N2DuTbx2OX94BoC17+W5d4=,tag:ma3h1Wxai5J4PMYw4VjDEg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
