--- a/ansible/inventory/kube/host_vars/k3s-07.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-07.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:sUn1CmRM,iv:h/BnlsioD+w/OVMDI1YrMqOs95Vs1lzJY1e4uodWed8=,tag:8hmCy4/B9+EwBeLzzJuX3g==,type:str]
-ansible_user: ENC[AES256_GCM,data:4ZSHqxqt,iv:oPjCoKN7e55VfxQ/xZzGo73py01aDHIrq+fYDusG8U8=,tag:sdUQhzWGBVwSKdKPP0TQHQ==,type:str]
+kind: ENC[AES256_GCM,data:pnJLoTGp,iv:Y/OxWf9uXI4dRkeQzMlnuesrzRLlvfwYRkoVbyEB8vU=,tag:OZmq8Q5PSkZ+RChPunO8GQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:xLj8JBM5,iv:oE8c/FqEyWzJ0SSmAufkeyDCf/8EK8mziH8/WUmvgBc=,tag:igFX/fOloIALSm6S7RKqHw==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlVkZ0a2RIZklvYjhtMDR5
-            c0hUZVBnOGZUazZIbzVHc2k3eERhWlZpc1NjCmI0TGtYOHhCR1ljVSthcnppQXl5
-            aFF5Z0JPZlRPK2lremsxQlhSYWRWMWsKLS0tIEVWSE5RSzFHSTZVSzBycHZtdWYv
-            RTJtY2ZjaEpjVVg1NTZ2SWJCeENWR28KZP2X88s+wftu7XVXdL7vdAsUfusFbS2z
-            7Z2yta2ZhhuVxdLhF+7ljrcgbOAhyBPgF8bDtYaVezPH25+ifbDhFA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmbDNScFNFbk9WQmZSbENN
+            MVQvZ0Nsc1hXNzQ0T3E2OFI4a3dncFF6ekRBCkxIR3NUSE5rMUNIeFdOSklhNXY3
+            cFIyRWlUd1lSeG1YWWU2RGFCdHRWbUEKLS0tIFVHRk1SWHZuWCtoNWVVbGpOV2tS
+            YUhIZXlPYVY3Vm5WU0xoUGltbTRaeHMKTl9SjAS3ocCgrZJYFgjUd3+5vh1cn3Pe
+            qDGWBpkeRm+kNOpgNx33fQsIAOMjJ2O1zFT/7lgliw+VLHCSiP2Uww==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:sedbLdtz7xllfMMvc+0CDpFHo/QX7YF5Ycf/cTvFm9LnGYH31ITBkGXhojMmxz7GcRa0nQsH2cV9pMfozsRFdfw+33N6fNuuB1yJaSMEud2R1IN5B4wWJbc3h2jZy+jfj9Ev4X6Rc8F+nycyyut1bODDZqWRjUGYpotSuTtIIHQ=,iv:G+abgXj0hsYfstXkw9oKRLctN7E2e+cbW4Wd6irE69U=,tag:J+UO+vKzYPxGliG9jw5nVA==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:G3nNGNR7QTPccXe9prev46MLX82U8hkPKKR9XhNuSlcRQmGVotz6fmvbgklqpO/jv+d1RkVQsM4RtBUjwq5pSC6lkZwGNjO8WqJnfBuvOj6qajs8zUoF+xks0Hj+vSeJyGo+1/pb9s6uK+E5bksgZ2VwppjTWDTUQIsiqSVVWRk=,iv:3NSuvoHZqk8+oDMzUdGlqoUUW2FIkeFfhiLTcF+qkMc=,tag:RbGk0v2H/V42mrFqY7pgsg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
