--- a/ansible/inventory/kube/host_vars/k3s-09.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-09.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:bDsiIuJP,iv:SVs8LmAFOd62lNMlsn1y7TZ2hoy3y5PZkzFWyxg5fJ0=,tag:Vhj6K+J02KL7BrdYR9Psfw==,type:str]
-ansible_user: ENC[AES256_GCM,data:SS/bgex9,iv:OO1URP3gYqECoQcd705U9kVmmP4ZFzITzy241liAQGk=,tag:+1GJlKIyTZrP93cexmTT0g==,type:str]
+kind: ENC[AES256_GCM,data:+F08V3kP,iv:Mcb7XxMg4cIRYMUR1IOZJJfZ7NpxQ8KzxLPOl+jIgzE=,tag:3An5A8BZ6RVy0HD6SRtYBg==,type:str]
+ansible_user: ENC[AES256_GCM,data:Ox6QAGF9,iv:hyUp/VUekgGtrBnnE7lWCz8SWbDH/vX5kD2paYCmmdg=,tag:hco/YK+iMI8hTBnPRNL1HQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArVE9VNWMyNkdGZnJvTFQ0
-            cGJWZmF4TU9wVjMzM1J1VzUwM0VJc1MxZndFCjg0Z01vWldtQzM4dm1XWUdxTGgr
-            Nmdsby80TnZrTjVFVE12RlJJSHFCYmsKLS0tIEVVWHBKV2plOTkveHBIRFVYdGZS
-            Q3NFSUU0Z1d5MUQzbkVjNWFyNlNVNWcKFvCy/xaw3TnSPuT4TtScCspKpn1Ruz4Q
-            gg1kPn/qO8BNdJW2e6uGNIuwGYULsml6zdyfS0Xc+fEcI92Mv96h6w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtaFZVYTZkLzlpSUpnWVV4
+            cmhrVFZieHRjZDdORmRJS0JsSUZ1cmFFMUh3ClpYclVKZmtQdy9zazBRQ2FJeTJF
+            UWVpUnhFZlpVLzV6NmIwbjd0K3B3MjgKLS0tIDlGM0o3NDBPQ1FVb0h1dldYZytU
+            akRmM052aTZtb2x2OVp0a21CdXcrQ1EK3Q276/x9sSql8V3msEhCVfmpzNrmteXK
+            3E/Rq0TJ/gS0DIl+0xy0gz/2UO4sQDNkUPSXucFCe0qxWx7a/81GWg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:E6yrMqshcc4TOpcf1ziteGEx/hm7mK3NrgnAndSVeh8bM2IvcmrTOC3pLjhKzTBNyKmRX1ql+/sqKxFww37e29aNYSp/xdyer1RIv5hGpCS8sDqG8RbTaIh3T6P6uw+MrmfaWp0nRnl4+oHbrwsjHBhlM6GEDJKEE5c8L7gemXM=,iv:KACfajoLQ5aAkeOEViJkqpDJ2fCGdlwbCOwHXkUOnXw=,tag:Sl5OkErIOL5zfUFsX1K5cw==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:nDjmT1xEcxEAuq1Bg+9fhn3mw8MMBuhduyrYwSXMFNCVQqD3jnnMsTY+B7dzMtGHY41GTgUVeLrDErFN5AcdimGkI6nuu1Vw0lRR/nkUL3e4n0Y9t05UKda4+alVNfVkNa/szf7k9x2pJy1wQEJ211G2eTOZs9TsE4YCwBXHuig=,iv:rcdgefYi0mzS4qScBTUdbAzh7iNjk8R1FzTh0baHWtE=,tag:/169wlDhLb+XH88d6HVJcQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
