--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:S0By7urWVXi4wspEDqWWS+HWorTE,iv:+Mdlmts8G9ducT+RaLtW+hjoJPmBtUYYcarQdCw3oJM=,tag:kTIZBCWix6SE2AA3/i8vkQ==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:5sOrmMsHL1uK9ABGv5y+Tzo8TXuIsen0EjPxOqDvakC3BWczwQ==,iv:6e3wVgqfWrnwErsteo9Z2dqc6phJBsb4E56SyVtu5aw=,tag:FFeMn+f3AkGfyVhg7Y167g==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:4jGVAIBFa9A42nk=,iv:CgKFzX6NtdgI5f4K6EfO74JJLKjinon3C9ptDptkyQI=,tag:0Iaqe5JNkTVB18KURZ+6sQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Ytb9LIlQPrRLDzHJMby5rMuX4k+5,iv:ZFy32CU0KL205cQ3Z+GIIrpwKDPqR/GhhxM7xUxajKs=,tag:dgstovLJ5qrFha9NPMAeTg==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:YTBXW57xflRE1qHGMtW9jPWiszZoghqbEgn32OrcCDCEOHBjSA==,iv:3gT4Yy15EdDdNpj5oFvcTMi0oUDhLgS385/FY+7sG3I=,tag:E6xseE4k/QwvYEUY97B9mg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:okwb1GA8mhs1bUQ=,iv:WH90j5x8khO7JuJqEqUsbQ0+n7uxfdj/Gr9PrUNqhHg=,tag:wonzxL/4+wdyec9LALhMgw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDOUp1eVBMclB2Smo3SUJB
-            WGNyRHhNWWpsVHE1RStMeVNPTXdnWXFUL0VrCldrSFBDVFN6SFhac2dPNnBLYUc3
-            N1BjYmFJZWFLR3hBMFlYUGZxS1JSWUUKLS0tIGNXMEoxN0h1WDY0MnVuNEIvY1BQ
-            V0R4VUlvTEY4bDR6MkpwY29VdERiNjgKg9F3bZs0DYkCEJ6fgZWlv7UFb5hgbvZi
-            kbxRheE3xPCD8dTZ/Yhi2RtJwFOHdr6vIctsilwPyNSK4wHzEfhhhA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaamYzcFRCbXYrakJtOFBy
+            MnlPM0hNVzhWY0JTUDNRL3Y2Y2VRUklRblhvCldNMGhlckVwbWs2a3dPN1hCeDl3
+            MXFGYTVUanZMcEhQejJ1QVJDL3o5emsKLS0tIDB6SHdVbC9vbko4U2Y2cjVURHBH
+            d0YwYmFHeEQ5bWFTZ2JVRXFBTk1acDQKN0hOwVfJZjDbcbIlQ20JNK7hyJBP9MMD
+            WhCuCxwY0Y8YPNC4QJk9SvL5OgjTDsru5TH99a7lZ+ZoKUKj8AtZ4A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:03q8YEzRtbjnxind+46+NWHnuxsNuhVXPMyFm8W4L6fqoUTliP+KiRBSsWuMFHThQU7wMXWkqqfi8gj9bepHcA1jHHv1kaMSrlx7RBCaeUH4kEyQX6GuCI7Sjqr/Y5PmIAMj5IImoUuL38tb6U6vav4RaSECOFoKWal6n6MNTSc=,iv:zRSx0HnExsvBuLWO6e9rNdlgSLs3WNN8JzxLtrYbWcw=,tag:LSxHrVJYjjsuVsqa86K6jg==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:Ttgz0xetwkTbDSXaHhgtPFQlt6HIhH524ICunOWEzgRTaGQoSaacvUmQCYXl/z4Lki3AeCnPVFVcAc460WrEqacxJAqJ0Admi+k1c9UAabjF5BfwqJ1gDG7kPL/C9+g8/uOfjvt1aiTql+GTn51dJ5zbZUeSJiirD1vnYGfx8BY=,iv:Qz6aM8aK7iNwvvcFimK0rLR2EhDQ+2s2IhLhMaMqHgw=,tag:A5dTu9ajNroXDxffIRMcRA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
