--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,27 +4,32 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:LAkdpmVeRyZRMOw=,iv:JR+Po2sbYXbAww0mYeG1mXD9H6WFkREg3koFRWeVRiw=,tag:HEcB7CUStjQhl2JbhxbzAg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:3Y3YYH92p3YhSSyk9pSrjkx3S00N,iv:ZgJBQZbZFNIhmnnHspTWGuRTcVkIMKDMpRONCcwcOU8=,tag:bO3GpdCbZEfG9t+PlIIsrg==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:Lqj4MPR0nFc7hwE7gmvzj5UN/ZhYweUfeZgd3ysXow3MwwAGxwOWzTKPek5liThePoZceSSG31Nscl/ukYWd8i9OZ7A3yl0=,iv:X12P5j/XtB9Xg5HSrVegwjfyNVylmtZw6p26PaZPiTs=,tag:oDfjAkjqMLN/LGs4sIbP4A==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:ekHY56ecVD/Tcjn+9rko76SeOcRRMkrduXbJ3acHW2U5Z+4=,iv:njavrwyShEAk7AHTGWmYH4jHjAlsskOXsnV8LN2Af5k=,tag:0BVBck55Y6JZ/vVPByXe1A==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:er8L5CwKpr7MrW/PD5jpU9dbRw==,iv:pLUuJzEVGcZS4RUub+ukzUmNRMqV/aCe/Tm+7egXqSE=,tag:tK6C5w0t1a08HIK79JnWwA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:J10SVo5VTV7Ln9TcHJxD9E23H/y4,iv:GBAnSpvoJwTsjfKlD1sLLPESWrK1UAxcuvHvIDBwy2s=,tag:rmh9gN/NUJSbnSXR8WXqpw==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:/ChauD96JeM=,iv:XNOZ6k7Ii6QIe2vmY5GG+8SoIWXNSxjBvWEqURBnLKQ=,tag:DjxDOIHL3K1CbYIslCaAKA==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:ozknFzdG79I=,iv:Xkw7tIfPUnEZdJCQp+fErJCkqSA2B7vFu7ZA+OBoStA=,tag:QK14f/4hC+HBXBp1Ddhk0g==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:oCDhyxQmTrbCeHUB6sod/sMHkpYjGuBh/ZQoM0FZ0PoaOLajlrwvVa4cGmW8pCPR6itJh1zZOM4hlm35WyE5yw==,iv:JmpjwV672df9/1ls9bUJIWdHBjUvzdJGbIjq/k4P98g=,tag:g1N+H5f/yoAsTLGfarQbiA==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:7Hv/Wdg9F6VtLlt5kHpwE6xh3w5t07aKiAEtxqlKFcvwaUMUqHdzFH3Uj/Nyg1bhK0oIvkbwsHIF2xCsRDXP2g==,iv:WWuGnn0L+6Uo3c+dO/lM7o3S4NI2sc7a4cjVnq6YIkU=,tag:pNots5QFN8YBoMUfiSNiTA==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:SlxnVQ/+wX2H,iv:Trnioard2nwskoo6X2BZN1E1djhDKMCLyELvyhu/29w=,tag:Madveu6DItmIEe1Z6tqxUQ==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:o4nI9a1sMZTJjPetdd3f,iv:YXzavCuD2epS6SfGM3yKUgOmAAOyuX2yd3BtESrCKKY=,tag:ZHFmjwQ4JFK43Kt0Fd4CAg==,type:str]
-    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:MBvvseQMllcIbYPRvJJ40Z0Aqk/CcwrLxG8J45c5igA2lZZpaCbvFaMZzTpRfJgQ1Rs=,iv:E9d2Ssosc0kpnZG7X4Jd7gJB9g79NG2vzUEmB6xNG7Q=,tag:aSbinWCUWLN4+Z/tkIEJMQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:MYU64qtd6YWI4+lKBSo=,iv:ZXn4stFEB2qEZ9tAoUfJMT8U4ZgNrtb2D2s3D9plJto=,tag:EKgBbV46ilBjgaIQF1rMIQ==,type:str]
-    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:jK0e6+1ZToworTPw4sDEMbYuews=,iv:7YayEBFS0E7YVRj4DQY+irWG7D760wm7kvH3liuX5gY=,tag:cfth9AvvjI3VqJTTAnMvZg==,type:str]
-    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:x5KchtRctY8=,iv:gw7YYTkgTsMrPu7N5HuUgnYIRQlOVvzlqTGm77NK07g=,tag:RHgBLnJmuMXqWy9lQ9mg8g==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:AU5NFXlsr0FEOrQkJLuseyGiYHWeWx2kDxp59IGnd2c8oOUZdA==,iv:4CmPnNvuedNOU1na6C6WMNwzPYcBC/cTHpFucDjg1d4=,tag:ilaG7FsLLYkz3LjGe0gYhg==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:mKvyxnf++5xz,iv:InwVTCqAsKujzWOAKgPKFCiX94SYAGUG9OHQ5rjwGlY=,tag:Zlc9PDL6auwGJ8TOKTmbSw==,type:str]
-    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:WYO4A8eGVAEr,iv:DpHImRcE3//bf0uRtULYigXxqo85XXsw9/m8DJmjtqA=,tag:lVsaRulpfcBPpVWH06RFtg==,type:str]
-    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:67QboYlsCg==,iv:xAlsaqA3IebW2rrBou2uIOWpgVyHZ9/cd1b8ElOcY0c=,tag:JaagoUplJC8UcGAtY8mXEA==,type:str]
-    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:W28ZvQhCNNwO,iv:CHGgG07grvX3fF32tZ5SYIAnu/aGGsxGIR+A9ZZCiiE=,tag:047FEFbQGOH9PrPS7l8ctA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:tJilvVVbC0TIWQk=,iv:xI7aqC6mFGYGmvGaOSlqXdZ29jHYnXZTKheClXguAuQ=,tag:QPul8+06T8PqisEZl0/cCg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:JZFTmZEAZbZJ3zwxJGRBzU5zCMn7,iv:mD1/G1/1BaWs9dePwT3FEX2QT48IsUkDDyMOTf6xkjI=,tag:aV6OkOq0Z3g3DaCPQqS1RA==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:TwfGSW3WRfIDsnT1J28XTUrPdrJgOpJU3Xj5Yn7L8iseGQDX3LdR0vtiI0BBQyzUm1M/tjDTXFk0pVs/1V5EsKoQMsrPTBY=,iv:eqV2QCPQ4lf3LAlKwTPJW7E2is20fh4bFHV/7KVChlY=,tag:e5fDldxNQicu7XTD3eLMng==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:wM6vlJmPhn0KTggLVA/1177hcdVDyw+4gcaY7sASUKwXWRw=,iv:F1/QJhbiiZhsSuRxxe7teAbn2qUTqI48Zh1TmWYFl6Q=,tag:7b58mxjA87qJzk8eGsJT1w==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:Sz0kwBaaCB/GeJXtmWyyYib2yQ==,iv:Tw9TEReWIaDSL+6BqTKp5LMsSYFCS520E9ZIfCDRH90=,tag:oD1N9PjgIFsTsBQNhgOEeQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:OeEs+GNYeCVjIyrKqee0um4F4vku,iv:3wcIHrs+2dIGATEaDE7qoL3/3xE+I1ehT/QxA6MJdeg=,tag:Rp7STwk//Q/OROITQMmnBA==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:ZnSKQVp6vXw=,iv:VsFcw3drUkcuO0jEYSvBi2EoJ9rFcr/zdBVRD5ePs4g=,tag:0aBu9PTGl9CzmL2s7g9Lzg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:4SjySfCr/qc=,iv:MjBIoZ4VoHuXOf6EBwrk5tBznSBs1hqFDLI2/gNx27I=,tag:sdTBcO5f5mvu7wpuqc5WzA==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:caQBAjQ5qYhmk/FEfEgkaMT7u6uE/4s9DPCHQKd/qaLyE8uG3iMf4QnXZsS8qgFPpglEakxH80+WLImsx4ZgAA==,iv:80zz99IiRUjE9lid9y+/DekahrYp071k1lelUQTVzQg=,tag:819M8hCrEDW+1k0aftrFNg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:EprTUJBbnjERAcvx9QwkFvsiWMSitlM3C1hKE/w1/FEjGepn3k1cobr+wqM2MS9kHke09jI9gbT3zJum80JaIA==,iv:LJHYOBcSku4VSa2mOqvVo1q+kL/YPTI3eaAHQGCNNSo=,tag:TMyWdcMThiX+IEYohxM7eg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:/JnNEb+KcRmq,iv:rsjqQc5tXxP1nSPAAKEOj1jdj5x4QujtZzzvScWOxfU=,tag:fb2yOuV8blrLT7FqzbyK9A==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:IPDsJR2ICBPN7OzOeOsz,iv:c/WZnY5iBGxypGiEG+VkRWng8jTVm8L1s0HtlIZbUAU=,tag:zTCmu7NmYTaqLdJrakUJGA==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:mAfwMWtDgAEYBhc84fMdckSmBfAxt6NuyizAPbaKY7fe6s2znwBviqQ3cu8wL2NwIEk=,iv:7DjyudWl8KTb3uX/0BmoDEiXdFCxSKC8WPUPZp4TCaU=,tag:KBGh1Ga3VBSgBnNFMmmZIg==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:dog66gF3nuUvGlg/HLU=,iv:1zfmUl//mIPBsZwd2oYXFnajPDJJUltP/+cCMFKNOcg=,tag:1cup6fYQ7wNP983DSTJ8SA==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:UI7fwF7OPlH8kyn7uoEsP1dzS6U=,iv:gVKw/iDuACRC4yKgw8o/uT3OQCVWENF7V1ss0fgyfec=,tag:+Ucg/i3cNGCA8KxRJp34kQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:ecVvsUXNZw8=,iv:JTLh/rTzyhGLdD/KPbBEeMsSxhoal2lFZwbdDtSKCRI=,tag:y5FeZivBk5RELfTOIRsQkA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:IWAbFzh55BQx8h6p9s1n5ooyQ3kyoR1tihwUqmiJruZpeUT+VQ==,iv:SaAV2bg0gLm2eo2NMVf4sqN6VY8IBr9ZnL8C00wl3vs=,tag:UfHpka3Mtwbc/D2E3Dolew==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:Cx49ViliTsHy,iv:wOeG6zptHz+x0+T7HVY0qPBFUMrk103jgkO4eqJGhMA=,tag:chpSBY3QC30bnoASHQLzRA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:OLNUh/L4lf3z,iv:ECRKpVyYF5XXPoCLcZDrCD7LrQBbFddgYoavYAiaIYI=,tag:a5+zCjN0ifTIs8H11x1HnA==,type:str]
+    SECRET_POSTGRES_USERNAME: ENC[AES256_GCM,data:rHri8c/a2w==,iv:BdRyeqZEBgLGXs0/ZKjYgFm0xU70XsgSejeqosm+EFo=,tag:HooPrQj4i5yZjLNwlRbDTA==,type:str]
+    SECRET_POSTGRES_PASSWORD: ENC[AES256_GCM,data:333WEPsFdhek,iv:QAsTS7mj1HobAS2nVVzpraoidGjmGCBnvn/Rt4UpQEo=,tag:cWQFOZ+vZXPUDvFTQUvqPw==,type:str]
+    SECRET_GF_SMTP_HOST: ENC[AES256_GCM,data:FIiLF7whab9L7Td5HqQ=,iv:G+9ZiXqTwCSzU3ZZoyhJaF8CDi55w4C/yaEhlQLWuMU=,tag:mFCuDmMyF5a5Lmps7jHXDQ==,type:str]
+    SECRET_GF_SMTP_FROM_ADDRESS: ENC[AES256_GCM,data:0flqHTHAW7eN3JOC0gP2LivgKQ==,iv:+RI8+YUnyGD7Q1jIA8c6f7PRtL2lOpGRb/N9wt3zPNE=,tag:8UB2Wmj/79r3E2tUCgFwgA==,type:str]
+    SECRET_GF_SMTP_FROM_NAME: ENC[AES256_GCM,data:F7Lp4Dp6/MI=,iv:u5FegQ8IyHWM+vJA9iHSCOVZzjETpnVJIetJ3AiSFGI=,tag:DSX21F5MktumN4EBK5Yx3w==,type:str]
+    SECRET_GF_SMTP_USER: ENC[AES256_GCM,data:bGiX5dmL29yRuUszvz0dvH4D0Q==,iv:KJPc5dsJSNCprAQnCqLxAgmPHyduGuLwwdKEspgt6nM=,tag:J9Jv4JvS/IhTm1U3yUugbQ==,type:str]
+    SECRET_GF_SMTP_PASSWORD: ENC[AES256_GCM,data:70dZpjzPS1z/,iv:QoSqKGE3asau1VccRgtZW54NGwLCO5M1X0kH98ZcyEI=,tag:1j5WKdnXjzHhyGdCLiVQUQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -34,14 +39,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTMzNQNFFzVFl1QWNuR0M3
-            aExjUkNCSjFNZS81czJNc0VoVlJJVmp4REhVCkY1ekQ4bERVZXFmNVVkVVF5OU5u
-            OGMzVmMwc1N0RkpFbVdpRDJuWnk5cGMKLS0tIGo2dzBSZW41N2JrRjlXUEdwOGZQ
-            Q1FIWGNrbnFjdHRaK0JtSjZZaGxEZmsKHwpcicWVGSFKK8wBs/GmfytPNj0DCQRc
-            Up4RJ8+0VKQbBNxgGU1//NfRv4JMhyWwh7fsn/XFozEDCv41IxT9Pw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsYTliaU1RSWMxdzZwTEJp
+            SmVmcDlOZ3JSL2JlQ0U3Z09QZHZocExGWWtNCjBtbHpROERmS1BGZzQ3a0w2M2s5
+            MDFydUdFQjlCN1lKK096MW1IWldZdmMKLS0tIGo1NHk3TTNWT3daV3pmc0t5SWdo
+            YVVzUGRROGRXREM2MVhVU0U4NUtBQk0K3lxv2rROfwloh8x8QH98F5qlyQjijPiY
+            AkMnpt0Jsg3xYtM8Rumf0zSEN+R83ZaHEQN7gjUuanh8WdCLFhqwZA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:27Z"
-    mac: ENC[AES256_GCM,data:+dVpuWe2lSdrWGLe29Tttvlhyz/IytxWLLZ/Z+ZRsojspkXE5NEXik6wZV4v0HWQAo4pYIA8GBYNock2JHb3HzC4Z9n7cvvKIuq4pHuw7+Y+uxAtXOtYU8BjZ4YbIKQV5TehrRswxURX8swTPK8/s64iACuxxlirbg4DYU/kH2M=,iv:4Ai4UJUeEDROW/ZJPVxGyb9tjYWeBBHjgo5WUwOPCJY=,tag:wpr8g/giJb4LBZSz+bEUJw==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:qk1hYThucSGVXsJpbfordtEEiHtx8d/1Ebb+Q4+64iOZRRuoPcIuXaob8SLKOR4So+abmQCjsIXOLVhtENulrXsXebgPEsTur+r03hS7Kw3g7KqfSMSZ2Uq8mIfeUp0GlYsQ+SLms5RzN0eiI4fMRLjsU6fFjBCGgc0iQ191MJo=,iv:3nsbl5I/pu8uNASR3OVczzuMA+cizpVCDHuAPUoKVjI=,tag:nSxthPeCcuGoZ/S32cUzvQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
