--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -26,3 +26,8 @@ stringData:
   SECRET_AUTHENTIK_POSTGRES_PASSWORD: ${BOOTSTRAP_AUTHENTIK_POSTGRES_PASSWORD}
   SECRET_POSTGRES_USERNAME: ${BOOTSTRAP_POSTGRES_USERNAME}
   SECRET_POSTGRES_PASSWORD: ${BOOTSTRAP_POSTGRES_PASSWORD}
+  SECRET_GF_SMTP_HOST: ${BOOTSTRAP_GF_SMTP_HOST}
+  SECRET_GF_SMTP_FROM_ADDRESS:  ${BOOTSTRAP_GF_SMTP_FROM_ADDRESS}
+  SECRET_GF_SMTP_FROM_NAME:  ${BOOTSTRAP_GF_SMTP_FROM_NAME}
+  SECRET_GF_SMTP_USER:  ${BOOTSTRAP_GF_SMTP_USER}
+  SECRET_GF_SMTP_PASSWORD:  ${BOOTSTRAP_GF_SMTP_PASSWORD}
