--- a/ansible/inventory/kube/host_vars/k3s-08.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-08.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:0qMEGFmb,iv:kAI7FDCDinXjdBD7wwrufIKpV23p97h8spgn8YwZkRM=,tag:RBl+B63kcwFq+RLwLXFmfw==,type:str]
-ansible_user: ENC[AES256_GCM,data:RqaD7Qcp,iv:RmoZjIJfgqm9QCmRug2vTtwblhMkn6aX37tBp/nwfS8=,tag:lzsTQa22gq2FEYuVncePkA==,type:str]
+kind: ENC[AES256_GCM,data:VppFvf2l,iv:vx8SAbKm9ms7qC/AIjQcUttfiBKXK3n2F8EaKXcj8Vs=,tag:v3aL4g24t8p+JLMAVfVI0A==,type:str]
+ansible_user: ENC[AES256_GCM,data:kh88t5aV,iv:/MfahN+CGcWQZG/Th8oBungdAwVxLSWqn3zaG4mJcFQ=,tag:VMu93mBV+zFV/Z5DLBDXOA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpT3dqenMrZXVnSDVWRWZF
-            VnRTNDh6V1hWUTd2Rm4rS2lRdHVJRW9qS1U4CjB2SlFuL1o0d3ZEWjFWbGRIR09C
-            ZTJ6L2Y1c3MvSUwyRDJaQXB4RVNrdE0KLS0tIG12L2VQMW0vZy9GNVI1aU5hZ05Z
-            d0V5UUd1RHM0dkVPZm9mWTRHNzE2bXcKmlX2DzynRFLBFPU9tkMaUU8vVIEPh3zB
-            M/T1LNuQ4qzIgjP5lwVtlzhjH4QC63/x7smHn8N3e0SKKXEz+ZnLbA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBHT1pKcGh1TXJPWWZxYXVU
+            S1gyaUVRVUlIN1IvYm0rY25qNXJvcENmbjBRCitjcFRqczJOdEhTSmRZR3IvbDZU
+            dVRQN3ZOci9uQXlScXJhcWVSTGw1TFkKLS0tIHArMUNNWEx3aE93UFRLaXdiUUp4
+            MFRHSUZobVR3bjAxV2phTENZcEJWVDAKBC36KEPLeW2SkZUyWXprjyqnkd/5df9h
+            pAabcWv+LTzejaWT1GOR5RiTX+I4glnlSifgRO7pF7fxuGzvfob8oQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-02-24T06:11:28Z"
-    mac: ENC[AES256_GCM,data:roII7kUPAxiSeCKupm3UtEZwA20o/BLfx1imsM/3udzxUscKwvVApD+12cTUQZFAXem6bY3BNl9y0GZO+VThSAtpuUjJ888mlzAvHCA5M715SacGG8zfv52D0ZF2Uax/jinV5F5mCYaKXlEGN+wR/vcQDM9ZGH3Kcd7Eup8phzo=,iv:XzqUUrIK4wo/jlZcl5NO4aLqkS3ELUdZWIgJu6LhGwE=,tag:7rH8y6XtB062M9xJb9R84A==,type:str]
+    lastmodified: "2023-03-02T04:14:10Z"
+    mac: ENC[AES256_GCM,data:bD7Xh0tI4WAg6fjXWkZEAaFBmCeZH8rLHnFai6LWYqJ5YK5fFRwK/xcz+NhtAIOtdztGQ/Cx4nFlMCo4fGk31nYgDQ6OUVN+Tl1Oo4RA2Wq3SCFHhUjnSFwkeDZySuNt+Mj+MH6WflfGjPIQSKqBQbfJGPATZgKfFMJX+kxl3hI=,iv:bvDV3xyQBhf3lFk3a+vReRm2NlLNbHKISc8EPYrKnXk=,tag:Hv4VpOmERs8mWNPS5EhviA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
