--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: grafana
-      version: 6.49.0
+      version: 6.50.7
       sourceRef:
         kind: HelmRepository
         name: grafana
@@ -33,6 +33,12 @@ spec:
     ## sops --decrypt ./kubernetes/apps/monitoring/grafana/app/grafana.sops.yaml | kubectl apply -f -
     admin:
       existingSecret: grafana-admin-creds
+    env:
+      GF_SMTP_HOST: ${SECRET_GF_SMTP_HOST}
+      GF_SMTP_FROM_ADDRESS: ${SECRET_SMTP_FROM_ADDRESS}
+      GF_SMTP_FROM_NAME: ${SECRET_SMTP_FROM_NAME}
+      GF_SMTP_USER: ${SECRET_SMTP_USER}
+      GF_SMTP_PASSWORD: ${SECRET_GF_SMTP_PASSWORD}
     grafana.ini:
       server:
         root_url: "https://grafana.${SECRET_DOMAIN}"
@@ -50,7 +56,6 @@ spec:
         enabled: true
       auth.anonymous:
         enabled: true
-        #org_name: HomeOps
         org_id: 1
         org_role: Viewer
 
@@ -82,15 +87,11 @@ spec:
             isDefault: true
     dashboards:
       default:
-        # Ref: https://grafana.com/grafana/dashboards/7845
-        zfs:
-          gnetId: 7845
-          revision: 4
+        radarr:
+          url: https://raw.githubusercontent.com/k8s-at-home/grafana-dashboards/main/radarr.json
           datasource: Prometheus
-        # Ref: https://grafana.com/grafana/dashboards/13502
-        minio:
-          gnetId: 13502
-          revision: 10
+        sonarr:
+          url: https://raw.githubusercontent.com/k8s-at-home/grafana-dashboards/main/sonarr.json
           datasource: Prometheus
     sidecar:
       dashboards:
