--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -97,9 +97,9 @@ spec:
       dashboards:
         enabled: true
         searchNamespace: ALL
-        # folderAnnotation: grafana_folder
-        # provider:
-        #   foldersFromFilesStructure: true
+        folderAnnotation: grafana_folder
+        provider:
+          foldersFromFilesStructure: true
       datasources:
         enabled: true
         searchNamespace: ALL
