--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -35,9 +35,9 @@ spec:
       existingSecret: grafana-admin-creds
     env:
       GF_SMTP_HOST: ${SECRET_GF_SMTP_HOST}
-      GF_SMTP_FROM_ADDRESS: "${SECRET_SMTP_FROM_ADDRESS}"
-      GF_SMTP_FROM_NAME: "${SECRET_SMTP_FROM_NAME}"
-      GF_SMTP_USER: "${SECRET_SMTP_USER}"
+      GF_SMTP_FROM_ADDRESS: "${SECRET_GF_SMTP_FROM_ADDRESS}"
+      GF_SMTP_FROM_NAME: "${SECRET_GF_SMTP_FROM_NAME}"
+      GF_SMTP_USER: "${SECRET_GF_SMTP_USER}"
       GF_SMTP_PASSWORD: ${SECRET_GF_SMTP_PASSWORD}
     grafana.ini:
       server:
