--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -85,6 +85,11 @@ spec:
             access: proxy
             url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090/
             isDefault: true
+          - name: influxdb
+            type: influxdb
+            access: proxy
+            url: http://influxdb.monitoring.svc.cluster.local:8086/
+            isDefault: false
     dashboards:
       default:
         radarr:
